[tool.poetry]
name = "pylivery"
version = "0.1.0"
description = ""
authors = ["Aitor Poquet <aitorpoquetgin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"


[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-mock = '*'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
